--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,13 @@
 		android:theme="@style/Theme.OTEAcademy"
 		tools:targetApi="31">
 		<activity
+			android:name=".BindingActivity"
+			android:exported="false">
+			<meta-data
+				android:name="android.app.lib_name"
+				android:value="" />
+		</activity>
+		<activity
 			android:name=".mvvm.MainActivity"
 			android:exported="true">
 			<meta-data
