--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,15 @@
 
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+	<uses-permission android:name="android.permission.READ_SMS"/>
+
+	<uses-feature android:name="android.hardware.telephony" android:required="false"/>
 
 	<application
 		android:allowBackup="true"
@@ -15,6 +24,13 @@
 		android:supportsRtl="true"
 		android:theme="@style/Theme.OTEAcademy"
 		tools:targetApi="31">
+		<activity
+			android:name=".MVIActivity"
+			android:exported="false">
+			<meta-data
+				android:name="android.app.lib_name"
+				android:value="" />
+		</activity>
 		<activity
 			android:name=".BindingActivity"
 			android:exported="false">
