--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,21 +26,28 @@
 		android:theme="@style/Theme.OTEAcademy"
 		tools:targetApi="31">
 		<activity
-			android:name=".NetworkActivity"
+			android:name=".storage.StorageActivity"
 			android:exported="false">
 			<meta-data
 				android:name="android.app.lib_name"
 				android:value="" />
 		</activity>
 		<activity
-			android:name=".MVIActivity"
+			android:name=".network.NetworkActivity"
 			android:exported="false">
 			<meta-data
 				android:name="android.app.lib_name"
 				android:value="" />
 		</activity>
 		<activity
-			android:name=".BindingActivity"
+			android:name=".mvi.MVIActivity"
+			android:exported="false">
+			<meta-data
+				android:name="android.app.lib_name"
+				android:value="" />
+		</activity>
+		<activity
+			android:name=".binding.BindingActivity"
 			android:exported="false">
 			<meta-data
 				android:name="android.app.lib_name"
